# fastrand-contrib

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: normal.rs
src/: float_normal.rs  float_range.rs  lib.rs
