[package]
name = "fastrand-contrib"
version = "0.1.0"
edition = "2018"

[dependencies]
fastrand = { version = "2.0.0", default-features = false }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[features]
default = ["std"]
std = ["alloc", "fastrand/std"]
alloc = ["fastrand/alloc"]
