[package]
name = "fastrand-contrib"
# Make sure to modify CHANGELOG.md before releasing a new version.
version = "0.1.0"
authors = ["John Nunley <dev@notgull.net>", "Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]
edition = "2018"
rust-version = "1.43.0"
description = "Extension functionality for fastrand"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/fastrand-contrib"
keywords = ["simple", "fast", "rand", "random", "wyrand"]
categories = ["algorithm"]
exclude = ["/.*"]

[dependencies]
fastrand = { version = "2.0.0", default-features = false }
libm_dep = { package = "libm", version = "0.2.7", optional = true }

[features]
default = ["std"]
std = ["alloc", "fastrand/std"]
alloc = ["fastrand/alloc"]
# The `dep:` syntax was added in Rust 1.60. Our current MSRV is 1.43.
libm = ["libm_dep"]
